--- a/app/src/main/res/layout/poster_item.xml
+++ b/app/src/main/res/layout/poster_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageViewPoster"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Movie Poster"
+        android:contentDescription="@string/movie_poster_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/movie01"
@@ -27,10 +27,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        android:contentDescription="Movie Title"
-        android:text="Movie Title That Turns Out To Be Horribly Long"
+        android:contentDescription="@string/movie_title_description"
+        android:text="@string/example_movie_title"
         android:textAllCaps="true"
-        android:textAppearance="@android:style/TextAppearance.Material.Title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@color/cardview_light_background"
         android:textIsSelectable="false"
         android:textSize="14sp"
@@ -39,6 +39,7 @@
         app:layout_constraintEnd_toEndOf="@+id/imageViewPoster"
         app:layout_constraintStart_toStartOf="@+id/imageViewPoster"
         app:outlineColor="@color/cardview_dark_background"
-        app:outlineWidth="2px" />
+        app:textAllCaps="true" />
+        <!--app:outlineWidth="2px" />-->
 
 </android.support.constraint.ConstraintLayout>
