Switched to actually using the models (now parcelable), updated json rest, actually gets data now. Oof that interface looks bad.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#111111"
-        android:text="123 ABC "
+        tools:text="123 ABC "
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@color/cardview_light_background"
@@ -28,7 +28,7 @@
         android:id="@+id/outlinetext2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="123 ABC "
+        tools:text="123 ABC "
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@color/cardview_light_background"
@@ -48,7 +48,7 @@
         android:textColor="@color/cardview_light_background"
         android:textIsSelectable="false"
         android:textStyle="bold"
-        android:text="123 ABC "
+        tools:text="123 ABC "
         android:textSize="18sp"
         app:outlineColor="#000000"
         android:background="#aaaaaa"/>
@@ -63,7 +63,7 @@
         android:textColor="@color/cardview_light_background"
         android:textIsSelectable="false"
         android:textStyle="bold"
-        android:text="123 ABC "
+        tools:text="123 ABC "
         android:textSize="14sp"
         app:outlineColor="#000000"
         android:background="#ffffff"/>
