--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativelayout"
@@ -10,70 +10,31 @@
     android:background="#445566"
     android:orientation="vertical">
 
-    <com.example.phoen.popularmovies.OutlineTextView
-        android:id="@+id/outlinetext1"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#111111"
-        tools:text="123 ABC "
-        android:textAllCaps="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/cardview_light_background"
-        android:textIsSelectable="false"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:outlineColor="#000000" />
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
-    <com.example.phoen.popularmovies.OutlineTextView
-        android:id="@+id/outlinetext2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="123 ABC "
-        android:textAllCaps="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/cardview_light_background"
-        android:textIsSelectable="false"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:outlineColor="#000000"
-        android:background="#666666"/>
-        <!--app:outlineWidth="1.2sp" />-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/options"
+            android:minHeight="?android:attr/actionBarSize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_scrollFlags="scroll|enterAlways"/>
 
-    <com.example.phoen.popularmovies.OutlineTextView
-        android:id="@+id/outlinetext3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/cardview_light_background"
-        android:textIsSelectable="false"
-        android:textStyle="bold"
-        tools:text="123 ABC "
-        android:textSize="18sp"
-        app:outlineColor="#000000"
-        android:background="#aaaaaa"/>
-        <!--app:outlineWidth="0.6sp" />-->
+    </android.support.design.widget.AppBarLayout>
 
-    <com.example.phoen.popularmovies.OutlineTextView
-        android:id="@+id/outlinetext4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/cardview_light_background"
-        android:textIsSelectable="false"
-        android:textStyle="bold"
-        tools:text="123 ABC "
-        android:textSize="14sp"
-        app:outlineColor="#000000"
-        android:background="#ffffff"/>
-        <!--app:outlineWidth="0.4sp" />-->
 
     <com.example.phoen.popularmovies.AutoFitRecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="@dimen/column_width"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:columnWidth="@dimen/column_width"/>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
