--- a/app/src/main/res/layout/poster_item.xml
+++ b/app/src/main/res/layout/poster_item.xml
@@ -10,9 +10,10 @@
 
     <ImageView
         android:id="@+id/imageViewPoster"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/movie_poster_description"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/movie01"
