--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="column_width">185dp</dimen>
+
+    <dimen name="appbar_header_height">256dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="activity_margin_content">24dp</dimen>
+
+    <dimen name="image_size">300dp</dimen>
 </resources>
