--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -23,12 +23,11 @@
             android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
-            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            app:contentScrim="@color/cardview_dark_background"
             app:expandedTitleGravity="bottom"
-            app:contentScrim="@color/colorPrimaryDark"
             app:expandedTitleMarginStart="@dimen/activity_margin_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            >
+            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 
             <ImageView
@@ -38,7 +37,8 @@
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.7"/>
+                app:layout_collapseParallaxMultiplier="0.7"
+                android:contentDescription="@string/header_content_description" />
 
             <View
                 android:layout_width="match_parent"
@@ -51,8 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
-                />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -84,7 +83,8 @@
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/movie01" />
+            app:srcCompat="@drawable/movie01"
+            android:contentDescription="@string/details_poster_content_description" />
 
         <com.example.phoen.popularmovies.OutlineTextView
             android:id="@+id/OriginalTitle"
@@ -96,7 +96,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Original Title"
+            tools:text="Original Title"
             android:textAppearance="@android:style/TextAppearance.Material.Title"
             android:textColor="@color/cardview_light_background"
             app:outlineColor="@color/cardview_dark_background"
@@ -111,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Rating:"
+            android:text="@string/ratingLabel"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@+id/OriginalTitle"
             app:layout_constraintTop_toBottomOf="@+id/OriginalTitle"
@@ -125,7 +125,7 @@
             android:layout_marginStart="8dp"
             android:textColor="@color/cardview_light_background"
             app:outlineColor="@color/cardview_dark_background"
-            android:text="9.3"
+            tools:text="9.3"
             app:layout_constraintStart_toEndOf="@+id/RatingLabel"
             app:layout_constraintTop_toTopOf="@+id/RatingLabel" />
 
@@ -134,7 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Releast Date:"
+            android:text="@string/release_date"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@+id/OriginalTitle"
             app:layout_constraintTop_toBottomOf="@+id/RatingLabel"
@@ -146,7 +146,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="2016-01-02"
+            tools:text="2016-01-02"
             android:textColor="@color/cardview_light_background"
             app:outlineColor="@color/cardview_dark_background"
             app:layout_constraintStart_toEndOf="@+id/ReleaseDateLabel"
@@ -161,7 +161,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Overview"
+            tools:text="Overview"
             android:textAppearance="@android:style/TextAppearance.Material.Medium"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintEnd_toEndOf="parent"
