--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
     </android.support.design.widget.AppBarLayout>
 
 
-    <com.example.phoen.popularmovies.AutoFitRecyclerView
+    <com.example.phoen.popularmovies.utils.AutoFitRecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
