--- a/app/src/main/res/layout/activity_internet_error.xml
+++ b/app/src/main/res/layout/activity_internet_error.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InternetError"
+    tools:context=".activities.InternetError"
     tools:showIn="@layout/activity_internet_error">
 
     <TextView
