Reviews are working again. I think. Started to outline data...

--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -12,7 +12,7 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/rated"
-        android:icon="@drawable/star"
+        android:icon="@drawable/thumb_up"
         android:title="@string/sort_highest_rated"
         app:showAsAction="never" />
     <item
