--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/colorPrimaryDark"
-    tools:context=".activities.Details">
+    tools:context=".activities.DetailsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/detail_appBar"
@@ -63,113 +63,120 @@
         android:id="@+id/detail_scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/cardview_dark_background"
         android:clipToPadding="false"
         android:paddingBottom="@dimen/activity_margin_content"
         android:paddingTop="@dimen/activity_margin_content"
-        android:background="@color/cardview_dark_background"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/detail_constraintLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/detail_constraintLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/Poster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/movie01"
-            android:contentDescription="@string/details_poster_content_description" />
+            <ImageView
+                android:id="@+id/Poster"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:contentDescription="@string/details_poster_content_description"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/movie01" />
 
-        <com.example.phoen.popularmovies.utils.OutlineTextView
-            android:id="@+id/OriginalTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            tools:text="Original Title"
-            android:textAppearance="@android:style/TextAppearance.Material.Title"
-            android:textColor="@color/cardview_light_background"
-            app:outlineColor="@color/cardview_dark_background"
-            app:layout_constraintBottom_toBottomOf="@+id/Poster"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/Poster"
-            app:layout_constraintTop_toTopOf="@+id/Poster"
-            app:layout_constraintVertical_bias="0.33" />
+            <com.example.phoen.popularmovies.utils.OutlineTextView
+                android:id="@+id/OriginalTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Title"
+                android:textColor="@color/cardview_light_background"
+                app:layout_constraintBottom_toBottomOf="@+id/Poster"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/Poster"
+                app:layout_constraintTop_toTopOf="@+id/Poster"
+                app:layout_constraintVertical_bias="0.33"
+                app:outlineColor="@color/cardview_dark_background"
+                tools:text="Original Title" />
 
-        <com.example.phoen.popularmovies.utils.OutlineTextView
-            android:id="@+id/RatingLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/ratingLabel"
-            android:textColor="@color/cardview_light_background"
-            app:layout_constraintStart_toStartOf="@+id/OriginalTitle"
-            app:layout_constraintTop_toBottomOf="@+id/OriginalTitle"
-            app:outlineColor="@color/cardview_dark_background" />
+            <com.example.phoen.popularmovies.utils.OutlineTextView
+                android:id="@+id/RatingLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/ratingLabel"
+                android:textColor="@color/cardview_light_background"
+                app:layout_constraintStart_toStartOf="@+id/OriginalTitle"
+                app:layout_constraintTop_toBottomOf="@+id/OriginalTitle"
+                app:outlineColor="@color/cardview_dark_background" />
 
-        <com.example.phoen.popularmovies.utils.OutlineTextView
-            android:id="@+id/Rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:textColor="@color/cardview_light_background"
-            app:outlineColor="@color/cardview_dark_background"
-            tools:text="9.3"
-            app:layout_constraintStart_toEndOf="@+id/RatingLabel"
-            app:layout_constraintTop_toTopOf="@+id/RatingLabel" />
+            <com.example.phoen.popularmovies.utils.OutlineTextView
+                android:id="@+id/Rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:textColor="@color/cardview_light_background"
+                app:layout_constraintStart_toEndOf="@+id/RatingLabel"
+                app:layout_constraintTop_toTopOf="@+id/RatingLabel"
+                app:outlineColor="@color/cardview_dark_background"
+                tools:text="9.3" />
 
-        <com.example.phoen.popularmovies.utils.OutlineTextView
-            android:id="@+id/ReleaseDateLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/release_date"
-            android:textColor="@color/cardview_light_background"
-            app:layout_constraintStart_toStartOf="@+id/OriginalTitle"
-            app:layout_constraintTop_toBottomOf="@+id/RatingLabel"
-            app:outlineColor="@color/cardview_dark_background" />
+            <com.example.phoen.popularmovies.utils.OutlineTextView
+                android:id="@+id/ReleaseDateLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/release_date"
+                android:textColor="@color/cardview_light_background"
+                app:layout_constraintStart_toStartOf="@+id/OriginalTitle"
+                app:layout_constraintTop_toBottomOf="@+id/RatingLabel"
+                app:outlineColor="@color/cardview_dark_background" />
 
-        <com.example.phoen.popularmovies.utils.OutlineTextView
-            android:id="@+id/ReleaseDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            tools:text="2016-01-02"
-            android:textColor="@color/cardview_light_background"
-            app:outlineColor="@color/cardview_dark_background"
-            app:layout_constraintStart_toEndOf="@+id/ReleaseDateLabel"
-            app:layout_constraintTop_toTopOf="@+id/ReleaseDateLabel" />
+            <com.example.phoen.popularmovies.utils.OutlineTextView
+                android:id="@+id/ReleaseDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:textColor="@color/cardview_light_background"
+                app:layout_constraintStart_toEndOf="@+id/ReleaseDateLabel"
+                app:layout_constraintTop_toTopOf="@+id/ReleaseDateLabel"
+                app:outlineColor="@color/cardview_dark_background"
+                tools:text="2016-01-02" />
 
-        <com.example.phoen.popularmovies.utils.OutlineTextView
-            android:id="@+id/Overview"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            tools:text="Overview"
-            android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            android:textColor="@color/cardview_light_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Poster"
-            app:outlineColor="@color/cardview_dark_background" />
+            <com.example.phoen.popularmovies.utils.OutlineTextView
+                android:id="@+id/Overview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/cardview_light_background"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Poster"
+                app:outlineColor="@color/cardview_dark_background"
+                tools:text="Overview" />
 
-    </android.support.constraint.ConstraintLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/Reviews"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/Overview" />
+
+        </android.support.constraint.ConstraintLayout>
 
 
     </android.support.v4.widget.NestedScrollView>
