--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -62,12 +62,13 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/detail_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/cardview_dark_background"
         android:clipToPadding="false"
         android:paddingBottom="@dimen/activity_margin_content"
         android:paddingTop="@dimen/activity_margin_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:fillViewport="true">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/detail_constraintLayout"
@@ -169,12 +170,31 @@
                 app:outlineColor="@color/cardview_dark_background"
                 tools:text="Overview" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/Reviews"
+            <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/Overview" />
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/Overview">
+
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tabLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabIndicatorColor="@android:color/darker_gray"
+                    app:tabTextColor="@android:color/darker_gray"
+                    app:tabMode="fixed"
+                    app:tabSelectedTextColor="@color/cardview_light_background" />
+
+                <com.example.phoen.popularmovies.utils.CustomPager
+                    android:id="@+id/viewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </com.example.phoen.popularmovies.utils.CustomPager>
+
+            </LinearLayout>
 
         </android.support.constraint.ConstraintLayout>
 
